# OsgCityScape

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
Examples/: CMakeLists.txt
Examples/HighlightArea/: CMakeLists.txt  HighlightArea.cpp
Examples/Portal2D/: CMakeLists.txt  Portal2D.cpp
Examples/RoadFX/: CMakeLists.txt  RoadFX.cpp
Examples/Test/: RTTCameraTest.cpp
Examples/osgoutline/: CMakeLists.txt  osgoutline.cpp
Examples/osgpick/: CMakeLists.txt
Examples/osgsimplegl3/: CMakeLists.txt  osgsimplegl3.cpp
Sources/: CMakeLists.txt  main.cpp
Sources/include/: RTTCamera.h  RenderTexture.h
Sources/include/BaseGeometryFactory/: BaseGeometry.h  Circle.h  Cylinder.h  GeometryFactory.h  Road.h
Sources/include/Core/: Event.h  EventManager.h
Sources/include/Core/Dialog/: NfdDialog.h
Sources/include/Core/ECS/: Level.h  LevelManager.h  Object.h  ObjectIDAllocator.h  WorldManager.h
Sources/include/Core/Helpers/: ISerializer.h  LogSystem.h  Serializer.h  TaskQueue.h  VectorConverter.h
Sources/include/Core/Math/: Math.h  MatrixHelper.h
Sources/include/Editor/Core/: Application.h  Editor.h  EditorInputManager.h  RuntimeContext.h
Sources/include/GUI/Core/: Panel.h  UIManager.h  WndPanel.h
Sources/include/GUI/Event/: UIEventManager.h
Sources/include/GUI/Helper/: ImGuiInitOperation.h
Sources/include/GUI/Panels/: Console.h  Hierachy.h  Inspector.h  MainMenuBar.h  Project.h  Scene.h  StatusBar.h
Sources/include/Render/: Material.h  Movie.h  RTTCamera.h  RenderPipelinePostProcess.h  RenderSystem.h  RenderTexture.h
Sources/include/Render/Config/: RenderConfig.h
Sources/include/Render/Core/: GeometryFactory.h
Sources/include/Render/Debugging/: CaptureCallback.h
Sources/include/Render/Effects/: Bloom.h  GaussianBlur.h  Msaa.h  OutlineFX.h
Sources/include/Render/Entities/: ArrowGizmo.h  BaseGeometry.h  Circle.h  Cylinder.h  Road.h  ShadowMapBakedGeometry.h  ShadowMapBakedRender.h
Sources/include/Render/Frontend/: Material.h  Material.inl  Movie.h
Sources/include/Render/LowRender/: DisplayTexture.h  RTTCamera.h  RenderColorToTexture.h  RenderDepthToTexture.h  RenderPipeline.h  RenderPipelinePostProcess.h
Sources/include/Render/Pass/: DepthPass.h  ImageProjectionPass.h  ObjectPickerPass.h  OpaqueEffectPass.h  TextureDisplayPass.h  TextureProjectionPass.h  TrianglePass.h
Sources/include/Resources/: Material.h  Material.inl  Object.h  RenderTexture.h
Sources/include/Resources/Loaders/: ShaderLoader.h  ShaderUtils.h  TextureDownsampleVisitor.h
Sources/include/Resources/ResourceManagement/: AssetManager.h  ConfigManager.h  MaterialManager.h
Sources/include/UI/: ImGuiInitOperation.h  OsgImGuiHandler.hpp
Sources/include/Utils/: OsgconvWrapper.h  SearchGeodeNode.h  ShaderUtils.h
Sources/include/Windowing/: Window.h
Sources/include/Windowing/Dialog/: NfdDialog.h
Sources/include/Windowing/Settings/: WindowSettings.h
Sources/src/: Movie.cpp  RTTCamera.cpp
Sources/src/BaseGeometryFactory/: GeometryFactory.cpp
Sources/src/Core/: EventManager.cpp  NfdDialog.cpp
Sources/src/Core/ECS/: Level.cpp  Object.cpp  ObjectIDAllocator.cpp  WorldManager.cpp
Sources/src/Core/Helpers/: Serializer.cpp
Sources/src/Editor/Core/: Application.cpp  Editor.cpp  EditorInputManager.cpp  RuntimeContext.cpp
Sources/src/GUI/Core/: LogSystem.cpp  Panel.cpp  UIManager.cpp  WndPanel.cpp
Sources/src/GUI/Event/: UIEventManager.cpp
Sources/src/GUI/Panels/: Console.cpp  Hierachy.cpp  Inspector.cpp  MainMenuBar.cpp  Project.cpp  Scene.cpp  StatusBar.cpp
Sources/src/Render/: Movie.cpp  RTTCamera.cpp  RenderPipelinePostProcess.cpp  RenderSystem.cpp
Sources/src/Render/Debugging/: CaptureCallback.cpp
Sources/src/Render/Effects/: Bloom.cpp  GaussianBlur.cpp  GaussianBlur.h  Msaa.cpp  OutlineFX.cpp
Sources/src/Render/Entities/: BaseGeometry.cpp  Circle.cpp  Cylinder.cpp  Road.cpp  ShadowMapBakedGeometry.cpp  ShadowMapBakedRender.cpp
Sources/src/Render/Frontend/: Material.cpp  Movie.cpp
Sources/src/Render/LowRender/: DisplayTexture.cpp  RTTCamera.cpp  RenderColorToTexture.cpp  RenderDepthToTexture.cpp  RenderPipeline.cpp  RenderPipelinePostProcess.cpp
Sources/src/Render/Pass/: DepthPass.cpp  ImageProjectionPass.cpp  ObjectPickerPass.cpp  OpaqueEffectPass.cpp  TextureDisplayPass.cpp  TextureProjectionPass.cpp  TrianglePass.cpp
Sources/src/Resources/: Material.cpp
Sources/src/Resources/Loader/: ShaderLoader.cpp
Sources/src/Resources/ResourceManagement/: AssetManager.cpp  ConfigManager.cpp  MaterialManager.cpp
Sources/src/UI/: ImGuiInitOperation.cpp  OsgImGuiHandler.cpp
Sources/src/UI/Helper/: ImGuiInitOperation.cpp
Sources/src/Utils/: NfdDialog.cpp  SearchGeodeNode.cpp  ShaderUtils.cpp
Sources/src/Windowing/: Window.cpp
Sources/src/Windowing/Dialog/: NfdDialog.cpp
resources/: CMakeLists.txt
resources/configs/: global_config.ini
resources/level/: 1-1.level.json  1.level.json
resources/materials/: wall.json  wall.mat
resources/objects/environment/fence/: fence5.mtl
resources/objects/environment/wall/: wall.object copy.json  wall.object.json
resources/shaders/common/: Depth.frag  Depth.vert  ImageProjection.frag  ImageProjection.vert  ShadowMapGeometryBaked.vert  UVUnwrap.frag  UVUnwrap.vert  Unlit.frag  Unlit.vert  textureProjection.frag  textureProjection.vert  texture_display.frag  texture_display.vert  triangle.frag  triangle.vert
resources/shaders/globalEffects/: bloomExtractBright.frag  bloomFinalPass.frag  gaussianBlur.frag  gaussianBlurHorizontal.vert  gaussianBlurVertical.vert  screen.frag  screen.vert
resources/shaders/lighting/: 1blinn_phong.vert  blinn_phong.frag  blinn_phong.vert
resources/shaders/localEffects/: Outline.frag  Outline.vert  highlightCircle.frag  highlightCircle.vert  highlightCylinder.frag  highlightCylinder.vert  portal2D.frag  portal2D.vert  roadFX.frag
resources/world/: hello.world.json
source/: CMakeLists.txt
source/test/: main.cpp
src/: CMakeLists.txt  Movie.cpp  RTTCamera.cpp  main.cpp
src/BaseGeometryFactory/: GeometryFactory.cpp
src/utils/: SearchGeodeNode.cpp  ShaderUtils.cpp
(+49 files in other folders)
