cmake_minimum_required(VERSION 3.0.0)
project(OSGCitySpace VERSION 0.1.0 LANGUAGES CXX C)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
add_definitions(-D_CRT_SECURE_NO_WARNINGS)

if(MSVC)
add_definitions(-D_CRT_SECURE_NO_WARNINGS)
endif()

# add_definitions(-DBOOST_THREAD_USE_LIB)
set(OSGCITYSPACE_ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
set(OSGCITYSPACE_BUILD_DIR "${CMAKE_CURRENT_SOURCE_DIR}/build")
set(CMAKE_INSTALL_PREFIX "${OSGCITYSPACE_BUILD_DIR}/bin")
set(BINARY_ROOT_DIR "${CMAKE_INSTALL_PREFIX}/")
set(THIRDPARTY_ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}/third-party")
set(THIRDPARTY_OSG_ROOT_DIR "${THIRDPARTY_ROOT_DIR}/osg-3.6.4")
set(OSG_INC_PATH "${THIRDPARTY_OSG_ROOT_DIR}/include")
set(OSGCITYSPACE_INC_PATH "${OSGCITYSPACE_ROOT_DIR}/include")
set(OSGCITYSPACE_RESOURCES_ROOT_DIR "${OSGCITYSPACE_ROOT_DIR}/resources")



file(GLOB_RECURSE OSG_DLL "${THIRDPARTY_OSG_ROOT_DIR}/bin/*.dll")
file(GLOB_RECURSE OSG_LIB "${THIRDPARTY_OSG_ROOT_DIR}/lib/*.lib")
add_subdirectory(src)
add_subdirectory(third-party)
add_subdirectory(resources)
# message(${OSG_LIB})