cmake_minimum_required(VERSION 3.0.0)
project(CityScapeEditor VERSION 0.1.0 LANGUAGES CXX C)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
add_definitions(-D_CRT_SECURE_NO_WARNINGS)
if(MSVC)
add_definitions(-D_CRT_SECURE_NO_WARNINGS)
endif()

# add_definitions(-DBOOST_THREAD_USE_LIB)
set(CITYSCAPEEDITOR_ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
set(CITYSCAPEEDITOR_SOURCES_DIR "${CITYSCAPEEDITOR_ROOT_DIR}/Sources")
set(CITYSCAPEEDITOR_BUILD_DIR "${CMAKE_CURRENT_SOURCE_DIR}/build")
set(CMAKE_INSTALL_PREFIX "${CITYSCAPEEDITOR_BUILD_DIR}/bin")
set(BINARY_ROOT_DIR "${CMAKE_INSTALL_PREFIX}/")
set(THIRDPARTY_ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty")
set(THIRDPARTY_OSG_ROOT_DIR "${THIRDPARTY_ROOT_DIR}/osg-3.6.4")
set(OSG_INC_PATH "${THIRDPARTY_OSG_ROOT_DIR}/include")
set(CITYSCAPEEDITOR_INC_PATH "${CITYSCAPEEDITOR_SOURCES_DIR}/include")
set(CITYSCAPEEDITOR_RESOURCES_ROOT_DIR "${CITYSCAPEEDITOR_ROOT_DIR}/Resources")
set(THIRDPARTY_IMGUI_ROOT_DIR "${THIRDPARTY_ROOT_DIR}/imgui")
set(IMGUI_INC_PATH "${THIRDPARTY_IMGUI_ROOT_DIR}/include")



file(GLOB_RECURSE OSG_DLL "${THIRDPARTY_OSG_ROOT_DIR}/bin/*.dll")
file(GLOB_RECURSE OSG_LIB "${THIRDPARTY_OSG_ROOT_DIR}/lib/*.lib")
add_subdirectory(Sources)
add_subdirectory(ThirdParty)
add_subdirectory(Resources)
add_subdirectory(Examples)
# message(${OSG_LIB})