file(GLOB_RECURSE MODEL_FILES "${OSGCITYSPACE_RESOURCES_ROOT_DIR}/models/*")
file(GLOB_RECURSE SHADER_FILES "${OSGCITYSPACE_RESOURCES_ROOT_DIR}/shaders/*")
file(GLOB_RECURSE VIDEO_FILES_0 "${OSGCITYSPACE_RESOURCES_ROOT_DIR}/videos/transition_mp4/*")
file(GLOB_RECURSE VIDEO_FILES_1 "${OSGCITYSPACE_RESOURCES_ROOT_DIR}/videos/video1_mp4/*")
# message(${VIDEO_FILES})
install(FILES ${MODEL_FILES} DESTINATION ${BINARY_ROOT_DIR}/resources/models)
install(FILES ${SHADER_FILES} DESTINATION ${BINARY_ROOT_DIR}/resources/shaders)
install(FILES ${VIDEO_FILES_0} DESTINATION ${BINARY_ROOT_DIR}/resources/videos/transition_mp4)
install(FILES ${VIDEO_FILES_1} DESTINATION ${BINARY_ROOT_DIR}/resources/videos/video1_mp4)