file(GLOB_RECURSE MODEL_FILES "${CITYSCAPEEDITOR_RESOURCES_ROOT_DIR}/models/*")
file(GLOB_RECURSE SHADER_FILES "${CITYSCAPEEDITOR_RESOURCES_ROOT_DIR}/shaders/*")
file(GLOB_RECURSE VIDEO_FILES_0 "${CITYSCAPEEDITOR_RESOURCES_ROOT_DIR}/videos/transition_mp4/*")
file(GLOB_RECURSE VIDEO_FILES_1 "${CITYSCAPEEDITOR_RESOURCES_ROOT_DIR}/videos/video1_mp4/*")

file(GLOB_RECURSE LEVEL_FILES "${CITYSCAPEEDITOR_RESOURCES_ROOT_DIR}/level/*")
file(GLOB_RECURSE CONFIG_FILES "${CITYSCAPEEDITOR_RESOURCES_ROOT_DIR}/configs/*")
file(GLOB_RECURSE WORLD_FILES "${CITYSCAPEEDITOR_RESOURCES_ROOT_DIR}/world/*")
file(GLOB_RECURSE Object_FILES "${CITYSCAPEEDITOR_RESOURCES_ROOT_DIR}/objects/*")

install(FILES ${MODEL_FILES} DESTINATION ${BINARY_ROOT_DIR}/resources/models)
install(FILES ${SHADER_FILES} DESTINATION ${BINARY_ROOT_DIR}/resources/shaders)
install(FILES ${VIDEO_FILES_0} DESTINATION ${BINARY_ROOT_DIR}/resources/videos/transition_mp4)
install(FILES ${VIDEO_FILES_1} DESTINATION ${BINARY_ROOT_DIR}/resources/videos/video1_mp4)

# install(FILES ${LEVEL_FILES} DESTINATION ${BINARY_ROOT_DIR}/resources/level)
# install(FILES ${CONFIG_FILES} DESTINATION ${BINARY_ROOT_DIR}/resources/configs)
# install(FILES ${WORLD_FILES} DESTINATION ${BINARY_ROOT_DIR}/resources/world)
# install(FILES ${Object_FILES} DESTINATION ${BINARY_ROOT_DIR}/resources/objects)